18 March 2014: Wouter
	- unit test for nodb mode.
	- Speed up zone write (.nl zonefile 30% faster).
	  The memory alloc-dealloc in print_rr has been moved to print_rrs.
	- (from 3.2), fix for #553 and for other TXT string syntax.
	- in nodb mode, xfrd.state is not written out, because the zones
	  are refreshed upon next startup anyway, so keeping timers and state
	  is unnecessary.

17 March 2014: Wouter
	- Speed up zone parsing (.nl reads 40% faster).
	  The rrtype_from_string routine is called often, optimised it.

14 March 2014: Wouter
	- tag 4.0.3
	- trunk has 4.0.4 in development.
	- database: "" starts without mmap of database.  Less memory is used,
	  zones are read from text zonefile.

13 March 2014: Wouter
	- Fix nsd.db unclean close check.  Previous databases are considered
	  unclean by the code and are created anew.
	- Adds nsd.db larger than 400Tb check for sanity. Also test if
	  filesize as documented in the file is correct.
	- nsd waits for tasks to complete on stop, prevents nsd.db corruption.
	- fix to not delete tmpdir too early in shutdown process.

12 March 2014: Wouter
	- tag 4.0.2
	- trunk has 4.0.3 in development.
	- disabled udb checking functionality that made it very slow,
	  this was enabled when enable-checking was turned on.

27 February 2014: Wouter
	- tag 4.0.2rc1

26 February 2014: Wouter
	- Fix that NSD will delete and recreate not-clean-closed databases.

20 February 2014: Wouter
	- Fix from 3.2: make SOA RDATA comparisons in XFR more lenient (only
	check serial).

18 February 2014: Wouter
	- Fix leak of zone name after zonefile read.
	- Fix malloc too large that would be leaked in the radix tree.

14 February 2014: Wouter
	- configure change for easier compile on Minix.

10 February 2014: Wouter
	- Fix #552: zonefile loads on nsd-control reconfig when the name
	  of the file has changed.

7 February 2014: Wouter
	- Fix #551: change Regent to Copyright holder in the LICENSE,