@@ -80,6 +80,7 @@ struct nsd_options {
 	const char* nsid;
 	int xfrd_reload_timeout;
 	int zonefiles_check;
+	int zonefiles_write;
 
         /** remote control section. enable toggle. */
 	int control_enable;
@@ -225,6 +226,9 @@ struct zonelist_bucket {
 	int linesize;
 	struct zonelist_free* list;
 };
+
+/* default zonefile write interval if database is "", in seconds */
+#define ZONEFILES_WRITE_INTERVAL 3600
 
 /*
  * Used during options parsing
