@@ -6,6 +6,8 @@
 	- in nodb mode, xfrd.state is not written out, because the zones
 	  are refreshed upon next startup anyway, so keeping timers and state
 	  is unnecessary.
+	- zonefiles-write option in nsd.conf, enabled when database is "".
+	  The server writes changed zonefiles to disk every hour.
 
 17 March 2014: Wouter
 	- Speed up zone parsing (.nl reads 40% faster).
